force-app/main/default/objects/LeadStagnantAlertSettings__c/LeadStagnantAlertSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for the LeadStagnantAlert batch and service</description>
    <label>Lead Stagnant Alert Settings</label>
</CustomObject>