force-app/main/default/objects/LeadStagnantAlertSettings__c/fields/Excluded_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Record_Types__c</fullName>
    <description>Semicolon-separated list of Lead RecordType DeveloperNames to exclude from stagnant alerts. If blank, no record types are excluded. Example: Realtor_Lead;Loan_Officer_Lead</description>
    <label>Excluded Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>