force-app/main/default/objects/LeadStagnantAlertSettings__c/fields/Execution_Mode__c.field-meta.xml
<CustomField>
    <fullName>Execution_Mode__c</fullName>
    <defaultValue>&quot;Batch&quot;</defaultValue>
    <description>Controls whether the scheduler uses Batch or Regular (synchronous) execution. Values: Batch or Regular.</description>
    <label>Execution Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>