force-app/main/default/objects/LeadStagnantAlertSettings__c/fields/Lead_Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Cutoff_Date__c</fullName>
    <description>Only leads created on or after this date are eligible for stagnant alerts. Defaults to 2025-01-01 if not set.</description>
    <label>Lead Cutoff Date</label>
    <type>Date</type>
</CustomField>